--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch ."
+    "test": "jest --watch .",
+    "coverage": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,6 @@
     "jest": "^21.2.1"
   },
   "jest": {
-    "collectCoverage": true
+    "collectCoverage": false
   }
 }
