--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch .",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "start": "node index"
   },
   "author": "",
   "license": "ISC",
